# OrderIndependentTransparency

./: .gitmodules  CMakeLists.txt  README.md
assets/RenderStates/: GeometryOpaque.drsn  GeometryResolve.drsn  GeometryTransparent.drsn  GraphicsPrimitives.drsn  RenderStatesLibrary.drsn
assets/Shaders/: Common.hlsli  GeometryOpaque.hlsl  GeometryResolve.hlsl  GeometryTransparent.hlsl  GraphicsPrimitives.hlsl
include/: OrderIndependentTransparencySample.hpp
source/: OrderIndependentTransparencySample.cpp
src/: OrderIndependentTransparencySample.cpp  OrderIndependentTransparencySample.hpp  RenderStateArchive.cpp  RenderStateArchive.hpp  ShaderResourceBindingArchive.cpp  ShaderResourceBindingArchive.hpp
